[package]
name = "mcan"
version = "0.1.0"
edition = "2024"

[dependencies]
static_cell = "2"
cortex-m = { version = "0.7" }
bitfield-struct = "0.11"
embassy-sync = { version = "0.6", optional = true }
defmt = { version = "1", optional = true }
paste = "1"

[features]
default = ["dep:defmt"]
g0 = []
g4 = []
l5 = []
h7 = []
defmt = []
asynchronous = ["dep:embassy-sync"]
embassy = ["asynchronous"]